--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
-        </nav>
+            </nav>
     </header>
     <section id="about">
         <h2>A propos</h2>
+        <br>
         <img src="photos-gratuites-libres-de-droits-domaine-public-creative-commons-téléchargement-libre1-22-548x667.jpg" alt="Photo de moi">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, dolores aspernatur dolorem accusamus asperiores accusantium.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere dolorum delectus earum nam distinctio tempora maiores culpa mollitia neque a rem, quas incidunt recusandae maxime deleniti ut nesciunt aperiam ratione quia nostrum, dolores repellendus totam accusamus. Laborum harum cupiditate saepe architecto asperiores, aspernatur similique distinctio earum eum, officia unde accusantium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, dolores aspernatur dolorem accusamus asperiores accusantium.</p>
     </section>
     <section id="portfolio">
         <h2>Portfolio</h2>
@@ -41,7 +42,7 @@
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae numquam eveniet inventore, consectetur rem quisquam! Alias quisquam rerum harum nam!</p>
         </div>
     </section>
-    <section id="Contact">
+    <section id="contact">
         <h2>Contact</h2>
         <form action="envoyer-formulaire.php" method="post">
             <label for="name">Nom :</label>
